<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DisplayActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/patient_record"
        android:textSize="35dp"
        android:textStyle="bold" />

    <!--For first name field-->
    <TextView
        android:id="@+id/textViewname"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/first_name"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ETname"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="90dp"
        android:layout_toEndOf="@+id/textViewname"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For Last name field-->
    <TextView
        android:id="@+id/textViewlname"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textViewname"
        android:text="@string/last_name"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ETlname"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ETname"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/textViewlname"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For address field-->
    <TextView
        android:id="@+id/textViewaddress"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textViewlname"
        android:text="@string/address"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ETaddress"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ETlname"
        android:layout_marginStart="17dp"
        android:layout_marginTop="20dp"
        android:layout_toEndOf="@+id/textViewaddress"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For Date of birth field-->
    <TextView
        android:id="@+id/textViewdob"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_below="@+id/textViewaddress"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/date_of_birth"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ETdob"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ETaddress"
        android:layout_marginStart="17dp"
        android:layout_marginTop="34dp"
        android:layout_toEndOf="@+id/textViewdob"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For doctor field-->
    <TextView
        android:id="@+id/textViewdep"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_below="@+id/textViewdob"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/department"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ETdep"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ETdob"
        android:layout_marginStart="17dp"
        android:layout_marginTop="30dp"
        android:layout_toEndOf="@+id/textViewdep"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For department field-->
    <TextView
        android:id="@+id/textViewdoc"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_below="@+id/textViewdep"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="@string/doctor"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ETdoc"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ETdep"
        android:layout_marginStart="17dp"
        android:layout_marginTop="35dp"
        android:layout_toEndOf="@+id/textViewdoc"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <TextView
        android:id="@+id/ids"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="visible"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="500dp"
        tools:visibility="visible" />
    <Button
        android:id="@+id/buttontest"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:onClick="createTests"
        android:text="@string/add_tests" />

</RelativeLayout>