<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".TestActivity">

    <!-- Title -->
    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_test"
        android:textStyle="bold"
        android:textSize="35dp"/>

    <!--For Patient name field-->
    <TextView
        android:id="@+id/textViewname"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="90dp"
        android:text="@string/patient_name"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/ETname"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="85dp"
        android:layout_toEndOf="@+id/textViewname"
        android:ems="10"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For Test date field-->
    <TextView
        android:id="@+id/textViewlname"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textViewname"
        android:text="@string/test_date"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/ETlname"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/textViewlname"
        android:layout_below="@+id/ETname"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For Nurse Name field-->
    <TextView
        android:id="@+id/textViewaddress"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/textViewlname"
        android:text="@string/nurse"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/ETaddress"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/textViewaddress"
        android:layout_below="@+id/ETlname"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For Test type field-->
    <TextView
        android:id="@+id/textViewdob"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_below="@+id/textViewaddress"
        android:layout_marginStart="20dp"
        android:layout_marginTop="25dp"
        android:text="@string/test_type"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/ETdob"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/textViewdob"
        android:layout_below="@+id/ETaddress"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For category field-->
    <TextView
        android:id="@+id/textViewdep"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_below="@+id/textViewdob"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/category"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/ETdep"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/textViewdep"
        android:layout_below="@+id/ETdob"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <!--For Readings field-->
    <TextView
        android:id="@+id/textViewdoc"
        android:layout_width="97dp"
        android:layout_height="27dp"
        android:layout_below="@+id/textViewdep"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:text="Readings"
        android:visibility="visible"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="52dp"
        tools:visibility="visible" />

    <EditText
        android:id="@+id/ETdoc"
        android:layout_width="243dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_toEndOf="@+id/textViewdoc"
        android:layout_below="@+id/ETdep"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        tools:layout_editor_absoluteX="124dp"
        tools:layout_editor_absoluteY="43dp" />

    <TextView
        android:id="@+id/patient_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="450dp"
        android:visibility="visible"
        tools:visibility="visible" />

    <Button
        android:id="@+id/buttontests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="400dp"
        android:onClick="clickTest"
        android:text="Add Test" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/det"
        android:layout_marginTop="500dp"
        />


</RelativeLayout>